--- a/navigation/main.css
+++ b/navigation/main.css
@@ -1,17 +1,72 @@
-div.card {
-    width: 300px;
-    height: 100px;
-
-    outline: 1px solid black;
+body {
+  background: linear-gradient(rgb(50, 200, 250), rgb(50, 120, 255));
+  background-size: 100% 1000px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
-.grid {
-    display: flex;
-    flex: 1;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.hide {
+  display: none;
 }
 
-.clickable {
-    cursor: pointer;
+.navigation {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.service-item,
+.service-content,
+.up-button {
+  box-shadow: 2px 3px rgba(70, 70, 70, 0.5);
+  background-color: rgba(230, 230, 230, 0.5);
+  border-radius: 10px;
+}
+.service-item.clicked,
+.service-content.clicked,
+.up-button.clicked {
+  box-shadow: -2px -3px rgba(70, 70, 70, 0.5);
+}
+
+.service-item {
+  width: 300px;
+  height: 100px;
+  padding: 10px;
+  font-size: 24px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.service-content {
+  padding: 10px;
+}
+
+.up-button {
+  width: 100px;
+  height: 100px;
+
+  background: url("./img/up-64.png") rgba(230, 230, 230, 0.5);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.child-arrow {
+  width: 32px;
+  height: 32px;
+  align-self: flex-end;
+
+  background: url("./img/right-arrow-32.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+main {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  row-gap: 50px;
+}
+
+.link {
+  cursor: pointer;
 }
