--- a/styles/admin.css
+++ b/styles/admin.css
@@ -40,3 +40,9 @@ form textarea {
   max-height: 500px;
   max-width: 700px;
 }
+
+.login {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
