--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@ body {
   padding: 0;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  min-width: 350px;
 }
 a {
   text-decoration: none;
@@ -19,15 +20,6 @@ a {
   flex-direction: column;
   width: 100%;
 }
-/* .root > * {
-    outline: 1px solid black;
-}
-.root > * > * {
-    outline: 1px dashed black;
-}
-article  * {
-    outline: 1px dotted gray;
-} */
 .row {
   display: flex;
   flex-direction: row;
@@ -85,6 +77,9 @@ article  * {
 .text-vert-center {
   vertical-align: bottom;
 }
+.space-between {
+  justify-content: space-between;
+}
 .bg-blur {
   -webkit-backdrop-filter: blur(3px);
   backdrop-filter: blur(3px);
@@ -98,6 +93,9 @@ article  * {
 }
 .text-blue {
   color: darkblue;
+}
+.margin-small {
+  margin: 3%;
 }
 
 header {
@@ -134,6 +132,25 @@ article h3 {
   background-color: var(--accent-color);
 }
 
+section > a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+nav {
+  position: fixed;
+  z-index: 2;
+  background-color: var(--accent-color);
+  width: 100%;
+  height: 30px;
+}
+
+.anchor {
+  position: relative;
+  top: -55px;
+}
+
 .glide__arrow {
   border: none !important;
   font-size: 24px !important;
@@ -145,4 +162,37 @@ footer {
   background-color: var(--accent-color);
   font-size: 12px;
   padding: 10px;
+}
+
+@media (max-width: 600px) {
+  .glide__slide {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .card {
+    width: 80vw;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+
+@media (max-width: 400px) {
+  .logo {
+    display: none;
+  }
+  .card {
+    width: 90vw;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .w300 {
+    width: 80vw;
+  }
+}
+
+@media (max-width: 300px) {
+  .card {
+    width: 90%;
+  }
 }
